--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@
 /build
 /captures
 .externalNativeBuild
+app/src/main/AndroidManifest.xml.bak
+app/src/main/AndroidManifest.xml.bak
+app/src/main/AndroidManifest.xml.bak
+app/src/main/AndroidManifest.xml.bak
+app/src/main/res/layout/activity_dashboard.xml.bak
